--- a/TMessagesProj/src/main/res/values/colors.xml
+++ b/TMessagesProj/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="widget_divider">#d9d9d9</color>
     <color name="widget_action_text">#8B8D8F</color>
     <color name="widget_edit_text">#999999</color>
+    <color name="invite_link_qr_tint">#989898</color>
 </resources>
